# KeibiDrop

./: .gitignore  .golangci.yml  .gosec.json  CONTRIBUTING.md  DCO.txt  LICENSE-GUIDE.md  Makefile  README.md  SETUP.md  Security.md  TODO.md  TROUBLESHOOTING.md  attacker_traversal.go  example_run_cli.sh  example_run_kd_alice.sh  example_run_peer_cli.sh  example_run_rust_ui.sh  example_run_rust_ui_nofuse.sh  example_run_ui.sh  gen_attacker.go  go.mod  go.sum  keibidrop.proto  nfpm.yaml  privacy.md  repro_traversal.go  repro_x25519_rekey.go  sbom.json
assets/: Info.plist.tmpl  keibidrop.desktop
choco/: keibidrop.nuspec.tmpl
cmd/: keibidrop.go
docs/: DesignDecisions.md  MODES.md  SECURITY_ADVISORY.md  kd-agent-guide.md  next-session.md  security-analysis-report-2026-03-04.md  security-audit-report.md
grpc_bindings/: keibidrop.pb.go  keibidrop_grpc.pb.go
mobile/: mobile.go  mobile_test.go  types.go
rust/: Cargo.toml  LICENSE  build.rs  build_platform_linux.rs  build_platform_other.rs  build_platform_windows.rs
rust/src/: bindings.rs  main.rs  theme.slint  ui.slint
rustbridge/: main.go
scripts/: update-packages.sh
snap/: snapcraft.yaml
testing/: Makefile  README.md  mount-fuse.go  run-benchmarks.sh  run-fstest.sh  run-git-clone.sh  run-postgresql.sh
tests/: Dockerfile.linux-test  bench_profile_test.go  bench_regression_test.go  benchmark_test.go  cipher_test.go  fuse_operations_test.go  harness_test.go  integration_connect_test.go  integration_disconnect_test.go  integration_error_test.go  integration_fuse_fcopyfile_test.go  integration_fuse_git_test.go  (+16 more)
(+167 files in other folders)
